css/main.css
/*!
 * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    overflow-x: hidden;
}

*{
    scroll-behavior: smooth;
}

.sub {
    width: 50px;
    height: 100%;
    float: left;
    text-align: center;
    padding: 10px 15px 0 0;
}

p {
    font-size: 20px;
}

p.small {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
    color: #023872;
}

.mail {
    color: white;
    font-size: 20px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
}

hr.star-light,
hr.star-primary {
    margin: 25px auto 30px;
    padding: 0;
    max-width: 250px;
    border: 0;
    border-top: solid 5px;
    text-align: center;
}

hr.star-light:after,
hr.star-primary:after portfolio-hover{
    content: "\f005";
    display: inline-block;
    position: relative;
    top: -.8em;
    padding: 0 .25em;
    font-family: FontAwesome;
    font-size: 2em;
}

hr.star-light {
    border-color: #fff;
}

hr.star-light:after {
    color: #fff;
    background-color: #5fbee4;
}

hr.star-primary {
    border-color: #2c3e50;
}

hr.star-primary:after {
    color: #2c3e50;
    background-color: #fff;
}

.img-centered {
    margin: 0 auto;
}

header{
    height: 110vh;
    overflow: hidden;
}


.background-container {
    display: flex;
    margin: 0;
    padding: 0;
    background-image: url('https://cdn.dodowallpaper.com/full/871/binary-wallpapers-5.jpg');

  }

  .background-transform {
    box-sizing: border-box;
    min-height: 100vh;
    text-align: center;
    align-items: center;
    padding-top: 20%;
    transform-style: inherit;
    width: 100vw;
  }

.scrollme
{
  padding:2em;
  perspective:100vh;
}

.animateme
{
  padding:10%;
  transform-origin:center center center;
}


@media(max-width:730px) {
    .background-transform .logo{
          width: 80%;
          
      }

      .background-transform{
        margin-top: 20%;
      }
  }
  
@media(max-width:600px) {
      .background-transform{
        margin-top: 30%;
      }
  }


  @media(max-width:500px) {

      .background-transform{
        margin-top: 40%;
      }
  }


  
  @media(max-width:400px) {

    .background-transform{
      margin-top: 50%;
    }
}

@media(max-width:300px) {

    .background-transform{
      margin-top: 60%;
    }
}
  

header .intro-text .name {
    display: block;
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 2em;
    font-weight: 700;
}

header .intro-text .skills {
    font-size: 1.25em;
    font-weight: 300;
}



@media(min-width:768px) {
    header .container {
        padding-top: 200px;
        padding-bottom: 100px;
    }
    header .intro-text .name {
        font-size: 4.75em;
    }
    header .intro-text .skills {
        font-size: 1.75em;
    }
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 25px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
    .navbar-fixed-top .navbar-brand {
        font-size: 1.5em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }
    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }
    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

.navbar {
    display: flex;
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    text-shadow: 1px 1px 3px #053446 #ffffff;
    min-height: 5rem;
}

.navbar a:hover {
    opacity: 1;
    background-color: #61767e;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.nav-fill{
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-evenly;
}

section {
    padding: 100px 0;
}

section h2 {
    margin: 0;
    font-size: 3em;
}

section.success {
    color: #fff;
    background: linear-gradient(141deg, #5d6979 0%, #1fc8db 51%, #2cb5e8 75%);
}

section.success a,
section.success a:hover,
section.success a:focus,
section.success a:active,
section.success a.active {
    outline: 0;
    color: #2c3e50;
}

section.success h3, section.success h4{
    color: whitesmoke;
    
}

section .row{
    padding-bottom: 25px;
}

#skills ul{
    list-style: none;
    font-size: 25px;
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }
    section.first {
        padding-top: 75px;
    }
    .navbar-brand {
        padding: 32px 15px;
        font-size: 13px;
    }
}



#portfolio .portfolio-item {
    right: 0;
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0 0 15px;

}

#portfolio .portfolio-item .portfolio-link {
    display: inline-block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item  #portfolio-hover-content{
    position: absolute;
    font-size: 10px;
    top:1;
    left: 1;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    width: 93%;
    height: 94%;
    opacity: 0;
    color: whitesmoke;
    text-shadow: 0 0 3px #0b90c0;
    background: #2c3e50;
}

#portfolio .portfolio-item  #portfolio-hover-content p{
    font-size: 18px;
    color: whitesmoke;
}

a.portfolio-link{
    color: whitesmoke;
    text-decoration: none;
}

#portfolio .portfolio-item  #portfolio-hover-content h4{
    font-size: 20px;
    color: #afe6fa;
}

#portfolio .portfolio-item  #portfolio-hover-content:hover{
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    opacity: 0.9;
}


#portfolio .portfolio-item .portfolio-link{
    opacity: 0.9;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}

.btn-outline {
    margin-top: 15px;
    border: solid 2px #fff;
    font-size: 20px;
    color: #fff;
    background: 0 0;
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #5fbee4;
    background: #fff;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding-bottom: .5em;
    border-bottom: 1px solid #eee;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    opacity: 0;
    -webkit-transition: top .3s ease, opacity .3s ease;
    -moz-transition: top .3s ease, opacity .3s ease;
    -ms-transition: top .3s ease, opacity .3s ease;
    transition: top .3s ease, opacity .3s ease;
}

.floating-label-form-group:not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #5fbee4;
}

form .row:first-child .floating-label-form-group {
    border-top: 1px solid #eee;
}

section#work{
    width: 80%;
    margin: auto;
}

footer {
    color: #fff;
    text-shadow: 0 0 1px black, 0 0 2px black;
    background:#5d6979;
}

footer h3 {
    margin-bottom: 30px;
}

footer .footer-above {
    padding-top: 50px;
}

footer .footer-col {
    margin-bottom: 50px;
}

footer .footer-below {
    padding: 25px 0;

}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}

.scroll-top {
    z-index: 1049;
    position: fixed;
    right: 2%;
    bottom: 2%;
    width: 50px;
    height: 50px;
}

.scroll-top .btn {
    width: 50px;
    height: 50px;
    border-radius: 100%;
}

.scroll-top .btn:focus {
    outline: 0;
}

.portfolio-modal .moportfolio-hover-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .moportfolio-hover-content h2 {
    margin: 0;
    font-size: 3em;
}

.portfolio-modal .moportfolio-hover-content img {
    margin-bottom: 30px;
}

.portfolio-modal .moportfolio-hover-content .item-details {
    margin: 30px 0;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #2c3e50;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #2c3e50;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.portfolio-modal .modal-backdrop {
    display: none;
    opacity: 0;
}

.top-buffer {
    margin-top: 20px;
}

#work .outsourcing p{
 padding-left: 50px;
}


@media(max-width:375px) {
    .navbar-toggle {
    margin: 10px 10px 0 0px;
            padding: 5px 5px;
    }
    .navbar-brand {
        padding: 23px 8px;
    }
    .sub{
    height: 100%;
    padding: 3px 15px 0 0;
    }
}

@media(max-width:320px) {
    .navbar-brand {
        font-size: 11px;
    }
}

P{
    font-size: 18px;
}

span{
    font-size: 14px;
}

#navbar-toggler {
    border-color: #007bff;
    background-color: #007bff;
}
#navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.email-icon{
    z-index: 100;
    color: white;
}

.location-map{
    box-shadow: 0 0 0 2px #007bff;
    height: 400px;
    width: 400px;

}

@media(max-width:550px){
    footer .col-md-4{
        padding: 0;
    }
    .location-map{
        height: 400px;
        width: 100%;
    }
}

/* ****** Section Projects ***** */
/* !Image collapse for small desktops 
 TODO ... 
*/
    

section.projects{
    padding: 0;    
}

section.container,
.carousel-item, 
.carousel-item img,
#myCarousel,
.carousel-inner{
    width: 100%;
}

.carousel{
    box-shadow: 0 0 0 2px rgba(0,0,0,.15);
}


.carousel-item-content{
    height: 30%;
    margin-bottom: 1em;
}

@media(max-width:400px){
    .carousel-item-content p{
        font-size: 3em;
    }

    .carousel-item-content{
        margin-bottom: 15%;
    }
}
.carousel-item-content p{
    font-size: 1em;
}


.carousel-item h2{
    color: #6acef3;
}

#myCarousel{
    padding-left: 0;
    padding-right: 0;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
}

 h3, h4{
    color: #2797c0;
}

section#about,
section#education,
section#skills,
section#work,
section#projects{
    margin-top: 5%;
    margin-bottom: 5%;
}

